fix center-alignment of object inspector

--- a/main.less
+++ b/main.less
@@ -202,6 +202,7 @@
             border-width: 0px;
             margin: 0;
             padding: 4px 8px;
+            text-align: left;
         }
 
         th.fn {
